--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+
+# Minecraft
+minecraft
+
 # eclipse
 bin
 *.launch
@@ -5,6 +9,9 @@ bin
 .metadata
 .classpath
 .project
+libs/
+lib sources/
+.vs
 
 # idea
 out
@@ -37,5 +44,4 @@ whitelist.json
 logs/
 crash-reports/
 *.launch
-# Minecraft
-minecraft
+*.jar
